--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
         </div>
       </div>
     </nav>
-    <div class="about">
-      <div class="info-centro">
-        <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-github" aria-hidden="true"></span>GITHUB</button>
-        <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-linkedin" aria-hidden="true"></span>LINKEDIN</button>
-      </div>
-    </div>
     <div class="intro-header">
         <div class="container">
             <div class="row">
@@ -48,13 +42,10 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="glyphicon icon-linkedin"></i> <span class="network-name">Twitter</span></a>
+                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-github" aria-hidden="true"></span>GITHUB</button>
                             </li>
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="glyphicon icon-github"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-linkedin" aria-hidden="true"></span>LINKEDIN</button>
                             </li>
                         </ul>
                     </div>
@@ -68,24 +59,17 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">Yape<br></h2>
+                    <p class="lead">A special thanks to for providing the photographs that you see in this template. Visit their website to become a member.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="assets/img/imag.jpg" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.content-section-a -->
-
     <div class="content-section-b">
-
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
@@ -94,20 +78,13 @@
                     <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="assets/img/imag.jpg" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.content-section-b -->
-
     <div class="content-section-a">
-
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
@@ -116,21 +93,13 @@
                     <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="assets/img/imag.jpg" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.content-section-a -->
-
-	<a  name="contact"></a>
     <div class="banner">
-
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-6">
                     <h2>Connect to Start Bootstrap:</h2>
@@ -149,14 +118,8 @@
                     </ul>
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.banner -->
-
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
@@ -178,13 +141,10 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
                 </div>
             </div>
         </div>
     </footer>
-
-
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="assets/js/app.js" charset="utf-8"></script>
