--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Sobre mí</a></li>
-            <li><a href="#">Trabajos</a></li>
-            <li><a href="#">Contáctame</a></li>
+            <li id="mi" class="active"><a href="#">Sobre mí</a></li>
+            <li id="trabajo"><a href="#">Trabajos</a></li>
+            <li id="contactame"><a href="#">Contáctame</a></li>
             <li><a href="#"></a></li>
           </ul>
         </div>
@@ -37,15 +37,15 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Landing Page</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+                        <h1>Betsi Loayza</h1>
+                        <h3>Front end developer</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-github" aria-hidden="true"></span>GITHUB</button>
+                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-github" aria-hidden="true"></span>GitHub</button>
                             </li>
                             <li>
-                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-linkedin" aria-hidden="true"></span>LINKEDIN</button>
+                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-linkedin" aria-hidden="true"></span>Linkedin</button>
                             </li>
                         </ul>
                     </div>
@@ -53,14 +53,17 @@
             </div>
         </div>
     </div>
-    <div class="content-section-a">
+    <div class="content-a work">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Yape<br></h2>
-                    <p class="lead">A special thanks to for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <p class="lead">Es una aplicación con la que tendrás la
+                      libertad de usar tu dinero cómo quieras, ya que pagar con
+                      ella es mas rápido. Esta app muestra las paginas para la
+                      inscripción</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="assets/img/imag.jpg" alt="">
@@ -68,7 +71,7 @@
             </div>
         </div>
     </div>
-    <div class="content-section-b">
+    <div class="content-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
@@ -83,7 +86,7 @@
             </div>
         </div>
     </div>
-    <div class="content-section-a">
+    <div class="content-a">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
@@ -98,52 +101,32 @@
             </div>
         </div>
     </div>
-    <div class="banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+                  <h3>Contáctame:</h3>
+                  <p>betsi.loayza@gmail.com</p>
+                  <p>Telefono: 997669327</p>
+              </div>
+              <div class="col-lg-12">
+                  <ul class="list-inline banner-social-buttons">
+                      <li>
+                        <span class="iconos glyphicon icon-pinterest-with-circle" aria-hidden="true"></span>
+                      </li>
+                      <li>
+                        <span class="iconos glyphicon icon-github-with-circle" aria-hidden="true"></span>
+                      </li>
+                      <li>
+                        <span class="iconos glyphicon icon-linkedin-with-circle" aria-hidden="true"></span>
+                      </li>
+                      <li>
+                        <span class="iconos glyphicon icon-instagram-with-circle" aria-hidden="true"></span>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js" charset="utf-8"></script>
