--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li id="mi" class="active"><a href="#">Sobre mí</a></li>
-            <li id="trabajo"><a href="#">Trabajos</a></li>
-            <li id="contactame"><a href="#">Contáctame</a></li>
+            <li id="mi" class="active"><a href="#inicio">Sobre mí</a></li>
+            <li id="trabajo"><a href="#trabajos">Trabajos</a></li>
+            <li id="contacto"><a href="#contactame">Contáctame</a></li>
             <li><a href="#"></a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="intro-header">
+    <div  id="inicio" class="intro-header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-    <div class="content-a work">
+    <div  id="trabajos" class="content-a work">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
@@ -101,7 +101,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer  id="contactame">
       <div class="container">
           <div class="row">
               <div class="col-lg-12">
