--- a/index.html
+++ b/index.html
@@ -4,132 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/icon/style.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
     <title>Portafolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Portafolio</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li id="mi" class="active"><a href="#inicio">Sobre mí</a></li>
-            <li id="trabajo"><a href="#trabajos">Trabajos</a></li>
-            <li id="contacto"><a href="#contactame">Contáctame</a></li>
-            <li><a href="#"></a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div  id="inicio" class="intro-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>Betsi Loayza</h1>
-                        <h3>Front end developer</h3>
-                        <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-github" aria-hidden="true"></span>GitHub</button>
-                            </li>
-                            <li>
-                              <button class="btn btn-default btn-lg" type="button"><span class="glyphicon icon-linkedin" aria-hidden="true"></span>Linkedin</button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div  id="trabajos" class="content-a work">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Yape</h2>
-                    <p class="lead">Es una aplicación con la que tendrás la
-                      libertad de usar tu dinero cómo quieras, ya que pagar con
-                      ella es mas rápido. Esta app muestra las paginas para la
-                      inscripción</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="assets/img/imag.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="content-b">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Titulo</h2>
-                    <p class="lead">Descripcion de pagina</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="assets/img/imag.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="content-a">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Titulo</h2>
-                    <p class="lead">Descripcion de pagina</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="assets/img/imag.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer  id="contactame">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-12">
-                  <h3>Contáctame:</h3>
-                  <p>betsi.loayza@gmail.com</p>
-                  <p>Telefono: 997669327</p>
-              </div>
-              <div class="col-lg-12">
-                  <ul class="list-inline banner-social-buttons">
-                      <li>
-                        <span class="iconos glyphicon icon-pinterest-with-circle" aria-hidden="true"></span>
-                      </li>
-                      <li>
-                        <span class="iconos glyphicon icon-github-with-circle" aria-hidden="true"></span>
-                      </li>
-                      <li>
-                        <span class="iconos glyphicon icon-linkedin-with-circle" aria-hidden="true"></span>
-                      </li>
-                      <li>
-                        <span class="iconos glyphicon icon-instagram-with-circle" aria-hidden="true"></span>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-    </footer>
+    <header>
+  		<div class="barra-menu">
+  			<a href="#" class="boton-menu">Menu</a>
+  		</div>
+  		<nav>
+  			<ul>
+  				<li><a href="#Inicio">Inicio</a></li>
+  				<li><a href="#Trabajos"></span>Trabajos</a></li>
+  				<li><a href="#Contactame"></span>Contactame</a></li>
+  			</ul>
+  		</nav>
+  	</header>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="assets/js/app.js" charset="utf-8"></script>
   </body>
 </html>
