--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/icon/style.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
     <title>Portafolio</title>
   </head>
@@ -38,6 +38,7 @@
         <img src="assets/img/foto-yo.png" alt="">
       </div>
       <h1>BETSI LOAYZA</h1>
+      <hr>
       <p>FRONT END DEVELOPER</p>
       <div class="iconos">
         <div class=" tamano-icon github">
@@ -48,7 +49,9 @@
         </div>
       </div>
     </div>
+    <div class="informacion flex-contenido">
 
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   	<script src="assets/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
