--- a/index.html
+++ b/index.html
@@ -50,8 +50,71 @@
       </div>
     </div>
     <div class="informacion flex-contenido">
-
+      <h4>kjhgfdddfghj</h4>
+      <hr>
+      <p>ljjhhg jbhjvyyu vyyjyfyffjyjfvuy uuyffy fyf  yfyyj j  jh hjvhjcffghj</p>
     </div>
+
+    <div class="trabajos">
+      <div class="titulo ">
+        <h3>titulo</h3>
+        <hr>
+      </div>
+      <div class="contenido ">
+        <div class="imagen column-media">
+          <img src="assets/img/imagen-proyecto.jpg" alt="">
+        </div>
+        <div class="descripcion column-media">
+            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+        </div>
+      </div>
+    </div>
+
+    <div class="trabajos">
+      <div class="titulo ">
+        <h3>titulo</h3>
+        <hr>
+      </div>
+      <div class="contenido ">
+        <div class="imagen column-media">
+          <img src="assets/img/imagen-proyecto.jpg" alt="">
+        </div>
+        <div class="descripcion column-media">
+            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+        </div>
+      </div>
+    </div>
+
+    <div class="trabajos">
+      <div class="titulo ">
+        <h3>titulo</h3>
+        <hr>
+      </div>
+      <div class="contenido ">
+        <div class="imagen column-media">
+          <img src="assets/img/imagen-proyecto.jpg" alt="">
+        </div>
+        <div class="descripcion column-media">
+            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+        </div>
+      </div>
+    </div>
+
+    <div class="trabajos">
+      <div class="titulo ">
+        <h3>titulo</h3>
+        <hr>
+      </div>
+      <div class="contenido ">
+        <div class="imagen column-media">
+          <img src="assets/img/imagen-proyecto.jpg" alt="">
+        </div>
+        <div class="descripcion column-media">
+            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   	<script src="assets/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
