--- a/index.html
+++ b/index.html
@@ -57,21 +57,36 @@
       <p>ljjhhg jbhjvyyu vyyjyfyffjyjfvuy uuyffy fyf  yfyyj j  jh hjvhjcffghj</p>
     </div>
 
-    <div id="trabajos" class="trabajos">
-      <div class="titulo ">
-        <h3>titulo</h3>
-        <!--fadeInUp  -->
-        <hr class="animated">
-      </div>
-      <div class="contenido ">
-        <div class="imagen column-media">
-          <img src="assets/img/imagen-proyecto.jpg" alt="">
+      <div id="trabajos" class="trabajos">
+        <div class="titulo ">
+          <h3>titulo</h3>
+          <!--fadeInUp  -->
+          <hr class="animated">
         </div>
-        <div class="descripcion column-media">
-            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+        <div class="contenido ">
+          <div class="imagen ">
+            <img src="assets/img/imagen-proyecto.jpg" alt="">
+          </div>
+          <div class="descripcion ">
+              aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          </div>
         </div>
       </div>
-    </div>
+
+      <div class="trabajos">
+        <div class="titulo ">
+          <h3>titulo</h3>
+          <hr>
+        </div>
+        <div class="contenido ">
+          <div class="imagen column-media">
+            <img src="assets/img/imagen-proyecto.jpg" alt="">
+          </div>
+          <div class="descripcion column-media">
+              aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
+          </div>
+        </div>
+      </div>
 
     <div class="trabajos">
       <div class="titulo ">
@@ -89,7 +104,7 @@
     </div>
 
     <div class="trabajos">
-      <div class="titulo ">
+      <div class="titulo center">
         <h3>titulo</h3>
         <hr>
       </div>
@@ -103,26 +118,12 @@
       </div>
     </div>
 
-    <div class="trabajos">
-      <div class="titulo ">
-        <h3>titulo</h3>
-        <hr>
-      </div>
-      <div class="contenido ">
-        <div class="imagen column-media">
-          <img src="assets/img/imagen-proyecto.jpg" alt="">
-        </div>
-        <div class="descripcion column-media">
-            aqui va la descripcionklbhvjghcghvljbnk mn  jvjhvhjvjhvghcghcgvhvghc
-        </div>
-      </div>
-    </div>
-    <div class="informacion contactame">
+    <!-- <div class="informacion contactame"> -->
       <div class="contactame flex">
-        <div class="info-contacto">
+        <div class="info-contacto flex">
           <h4>CONTÁCTAME</h4>
-          <p>Si te gusto mi trabajo, mis habilidades o las tecnologias que uso,
-            te dejo mi correo y teléfono para ponernos en contaco.</p>
+          <p class="centrar-texto">Si te gusto mi trabajo, mis habilidades o las tecnologias que uso,
+            te dejo mi correo y teléfono para ponernos en contacto.</p>
             <p>Email: betsi.loayza@gmail.com</p>
             <p>Teléfono: 997669327</p>
         </div>
@@ -133,7 +134,7 @@
           <span class="icon-instagram-with-circle"></span>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
     <footer class="flex color-plomo padding">
       <p>Creado por Betsi Loayza</p>
     </footer>
