--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
       <h4>kjhgfdddfghj</h4>
       <hr>
       <p>ljjhhg jbhjvyyu vyyjyfyffjyjfvuy uuyffy fyf  yfyyj j  jh hjvhjcffghj</p>
+        <h4>Herramientas aprendidas:</h4>
+        <div class="skills">
+          <img src="assets/img/css.png" alt="">
+
+        </div>
     </div>
 
       <div id="trabajos" class="trabajos">
