--- a/index.html
+++ b/index.html
@@ -55,12 +55,54 @@
       <h4>kjhgfdddfghj</h4>
       <hr>
       <p>ljjhhg jbhjvyyu vyyjyfyffjyjfvuy uuyffy fyf  yfyyj j  jh hjvhjcffghj</p>
-        <h4>Herramientas aprendidas:</h4>
+      <h4>Herramientas aprendidas:</h4>
         <div class="skills">
-          <img src="assets/img/css.png" alt="">
-
+          <div class="icon-skill">
+            <img src="assets/img/html.png" alt="">
+            <h4>Html</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/css.png" alt="">
+            <h4>Css</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/js.png" alt="">
+            <h4>Javascript</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/git.png" alt="">
+            <h4>Git</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/bootstrap.png" alt="">
+            <h4>Bootstrap</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/api.png" alt="">
+            <h4>API</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/jquery.png" alt="">
+            <h4>Jquery</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/gulp.png" alt="">
+            <h4>Gulp</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/sass.png" alt="">
+            <h4>Sass</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/node-js.png" alt="">
+            <h4>Node.js</h4>
+          </div>
+          <div class="icon-skill">
+            <img src="assets/img/Materialize.png" alt="">
+            <h4>Materialize</h4>
+          </div>
         </div>
-    </div>
+      </div>
 
       <div id="trabajos" class="trabajos">
         <div class="titulo ">
